Fixed header being too small on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ h1 {
 }
 @media (max-width: 768px) {
   h1 {
-    font-size: 30px;
+    font-size: 45px;
     padding: 10px;
   }
   #navigation {
